tests/miniJava/pos/001302_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( this ) java = 0 ; } }
