tests/miniJava/neg/005237_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] int ( ) { return 0 ; } }
